fix: improve color contrast of dark themes

--- a/src/scss/themes/_dark.scss
+++ b/src/scss/themes/_dark.scss
@@ -46,4 +46,6 @@
   --tab-bg-hover-non-selected: #{darken($main-bg-color, 1%)};
 
   --toast-anchor-color: #{$anchor-color};
+
+  --length-indicator-color: var(--action-button-fill-color);
 }
